--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cocaine-core
 Section: utils
 Priority: extra
 Maintainer: Andrey Sibiryov <kobolog@yandex-team.ru>
-Build-Depends: cdbs, debhelper (>= 7.0.13), libzmq-dev (>= 2.2.0), libev-dev, libmsgpack-dev,
+Build-Depends: cdbs, debhelper (>= 7.0.13), libzmq-dev, libev-dev, libmsgpack-dev,
  libboost-dev, libboost-filesystem-dev, libboost-thread-dev, libboost-program-options-dev,
  libssl-dev, libltdl-dev, libcgroup-dev, uuid-dev, cmake, libarchive-dev
 Standards-Version: 3.9.1
@@ -11,7 +11,7 @@ Vcs-Browser: https://github.com/cocaine/cocaine-core
 
 Package: libcocaine-common1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libzmq1 (>= 2.2.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Provides: cocaine-core
 Replaces: cocaine-core
 Description: Cocaine - Common Libraries
@@ -30,7 +30,7 @@ Architecture: any
 Section: libdevel
 Provides: cocaine-dev
 Replaces: cocaine-dev
-Depends: ${shlibs:Depends}, ${misc:Depends}, libzmq-dev (>= 2.2.0), libev-dev, libmsgpack-dev,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libzmq-dev, libev-dev, libmsgpack-dev,
  libboost-dev, libboost-thread-dev, libssl-dev, libcocaine-common1 (= ${Source-Version}),
  libcocaine-core1 (= ${Source-Version})
 Description: Cocaine - Development Headers
